--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.1.0
   lottie: ^3.1.0
+  confetti: ^0.7.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
