--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   lottie: ^3.1.0
   confetti: ^0.7.0
   google_nav_bar: ^5.0.6
+  video_player: ^2.8.2
+  vimeo_video_player: ^0.0.12
+  visibility_detector: ^0.4.0+2
+  webview_flutter: ^4.7.0
 
 dev_dependencies:
   flutter_test:
