--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   visibility_detector: ^0.4.0+2
   cloud_firestore: ^4.15.5
   webview_flutter: ^4.7.0
+  firebase_auth: ^4.17.5
+
 
 dev_dependencies:
   flutter_test:
