--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.1.0
   lottie: ^3.1.0
   confetti: ^0.7.0
+  flutter_inappwebview: ^6.0.0
   google_nav_bar: ^5.0.6
   video_player: ^2.8.2
   firebase_core: ^2.25.4
@@ -46,6 +47,8 @@ dependencies:
   cloud_firestore: ^4.15.5
   webview_flutter: ^4.7.0
   firebase_auth: ^4.17.5
+  youtube_player_flutter: ^9.0.1
+  http: ^1.2.1
 
 
 dev_dependencies:
